# gtkrsync

./: .hgtags  COPYING  COPYRIGHT  Makefile  RsyncGUI.hs  RsyncParser.hs  grsyncprogress.cabal  grsyncprogress.glade  grsyncprogress.gladep  grsyncprogress.hs  gtkrsync.cabal  gtkrsync.glade  gtkrsync.gladep  gtkrsync.hs  gtkrsyncp.hs
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gtkrsync-default.ex  gtkrsync.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
docs/: SConstruct  gtkrsync.1  man.gtkrsync.sgml
