Name: grsyncprogress
Version: 0.5.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Beta
Copyright: Copyright (c) 2007 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/grsyncprogress
Category: Network
Synopsis: Gnome rsync progress display
Build-Depends: base, unix, gtk, gconf, glade, regex-posix, MissingH
data-files: grsyncprogress.glade

Executable: grsyncprogress
Main-Is: grsyncprogress.hs
GHC-Options: -O2
