Name: gtkrsync
Version: 1.0.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Beta
Copyright: Copyright (c) 2007 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://hg.complete.org/gtkrsync
Category: Network
Synopsis: Gnome rsync progress display
Build-Depends: base, unix, gtk, gconf, glade, regex-posix, MissingH
data-files: gtkrsync.glade

Executable: gtkrsync
Main-Is: gtkrsync.hs
GHC-Options: -O2

Executable: gtkrsyncp
Main-Is: gtkrsyncp.hs
GHC-Options: -O2

